--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "next": "latest",
     "next-sanity": "^0.5.2",
@@ -15,6 +16,7 @@
     "react-portable-text": "^0.4.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
